fixed overlapping flexhandle label by setting overflow hidden. see #37560

--- a/src/base/FlexHandle/FlexHandle.scss
+++ b/src/base/FlexHandle/FlexHandle.scss
@@ -19,10 +19,12 @@
     }
 
     &.cui-flex-handle-row {
+        overflow: hidden;
         cursor: ew-resize;
         width: $flex_handle_size;
     }
     &.cui-flex-handle-column {
+        overflow: hidden;
         cursor: ns-resize;
         height: $flex_handle_size;
     }
